--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,10 @@
   display: none;
 }
 
+input {
+  margin: auto;
+}
+
 .container {
   background-color: rgba(255, 255, 255, 0.8);
   border-radius: 20px;
@@ -40,4 +44,10 @@ body {
   width: 100px;
   display: block;
   margin-bottom: 20px;
+}
+
+.btn {
+  background-color: pink;
+  color: black;
+  width: 135px;
 }
