add karma testing.

--- a/src/styles.css
+++ b/src/styles.css
@@ -17,9 +17,9 @@ input {
   text-align: center;
 }
 
-body {
+/*body {
   background-image: url(../img/pig.png);
-}
+}*/
 
 .dice-faces {
   width: 50%;
